# fmriprep-resampling-demo

./: .gitattributes  .gitmodules  README.md  pyproject.toml  resample.ipynb
.datalad/: config
code/: fetch-data.py
